third_party/move/move-compiler-v2/tests/checking/naming/unbound_module_name.exp

Diagnostics:
error: unable to infer type: `?0`
  ┌─ tests/checking/naming/unbound_module_name.move:7:13
  │
7 │         let x = N::c;
  │             ^

error: undeclared `N::c`
  ┌─ tests/checking/naming/unbound_module_name.move:7:17
  │
7 │         let x = N::c;
  │                 ^^^^

error: unable to infer type: `?1`
  ┌─ tests/checking/naming/unbound_module_name.move:8:13
  │
8 │         let y = Self::c;
  │             ^

error: undeclared `M::c`
  ┌─ tests/checking/naming/unbound_module_name.move:8:17
  │
8 │         let y = Self::c;
  │                 ^^^^^^^

error: undeclared `N::c`
  ┌─ tests/checking/naming/unbound_module_name.move:9:13
  │
9 │         0 + N::c + Self::c;
  │             ^^^^

error: undeclared `M::c`
  ┌─ tests/checking/naming/unbound_module_name.move:9:20
  │
9 │         0 + N::c + Self::c;
  │                    ^^^^^^^
